create-exam-entities
