# adapter/src/main/java/tomaszewski/out/entities/QuestionEntity.java
@@ -1,0 +1,30 @@
+package tomaszewski.out.entities;
+
+import jakarta.persistence.*;
+import lombok.Data;
+
+import java.util.ArrayList;
+import java.util.List;
+
+@Entity(name = "question")
+@Data
+public class QuestionEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    private String content;
+
+    private Integer score;
+
+    @Enumerated(EnumType.STRING)
+    private QuestionType type;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "exam_id")
+    private ExamEntity exam;
+
+    @OneToMany(mappedBy = "question", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<AnswerOptionEntity> options = new ArrayList<>();
+
+}
