# openapi/exam.yaml
@@ -39,6 +39,39 @@ paths:
         "201":
           description: Exam created
 
+  /users/{userId}/attempts:
+    get:
+      tags:
+        - Attempt
+      summary: Retrieves the last N attempts of a user
+      operationId: getUserLastAttempts
+      parameters:
+        - name: userId
+          in: path
+          description: The ID of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: limit
+          in: query
+          description: The number of last attempts to retrieve (default is 5)
+          required: false
+          schema:
+            type: integer
+            default: 5
+      responses:
+        "200":
+          description: A list of the user's last attempts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AttemptDTO"
+        "404":
+          description: User not found or no attempts found
+
 components:
   schemas:
     ExamDTO:
@@ -52,3 +85,23 @@ components:
         date:
           type: string
           format: date
+
+    AttemptDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        userId:
+          type: integer
+          format: int64
+        examId:
+          type: integer
+          format: int64
+        attemptDate:
+          type: string
+          format: date-time
+        score:
+          type: integer
+        passed:
+          type: boolean
